# coreason_etl_liver_tox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  llms.txt  pyproject.toml  test_override.py  zensical.toml
.dlt/: secrets.toml
.github/workflows/: ci.yml
dbt/: dbt_project.yml
dbt/models/: schema.yml
dbt/models/silver/: silver_livertox_records.sql
docs/: index.md
mocks/dbt-extractor/: pyproject.toml
mocks/orjson/: pyproject.toml
mocks/pywin32/: pyproject.toml
scripts/: run_dbt_tests.sh  seed_mock_db.py
src/coreason_etl_liver_tox/: __init__.py  bronze_ingestion_intent.py  client.py  config.py  identity.py  main.py  parser.py  pipeline.py  resolver.py
src/coreason_etl_liver_tox/config/: __init__.py  settings.py
src/coreason_etl_liver_tox/dbt/: dbt_project.yml
src/coreason_etl_liver_tox/dbt/models/: gold_livertox_risk_matrix.sql  gold_livertox_search_index.sql  schema.yml  silver_livertox_records.sql  sources.yml
src/coreason_etl_liver_tox/dbt_project/: dbt_project.yml  profiles.yml
src/coreason_etl_liver_tox/dbt_project/models/: gold_livertox_risk_matrix.sql  gold_livertox_search_index.sql  schema.yml  silver_livertox_records.sql
src/coreason_etl_liver_tox/dbt_project/models/gold/: coreason_etl_liver_tox_gold_livertox_risk_matrix.sql  coreason_etl_liver_tox_gold_livertox_search_index.sql
src/coreason_etl_liver_tox/dbt_project/models/silver/: coreason_etl_liver_tox_silver_livertox_records.sql
src/coreason_etl_liver_tox/dbt_project/seeds/: coreason_etl_liver_tox_bronze_livertox_raw.csv  seeds.yml
src/coreason_etl_liver_tox/utils/: __init__.py  epistemic_eutilities_client_policy.py  identity_resolution_policy.py  logger.py  xml_transmutation_policy.py
tests/: test_bronze_ingestion_intent.py  test_client.py  test_config.py  test_dbt_initialization.py  test_dbt_models.py  test_epistemic_eutilities_client_policy.py  test_identity.py  test_identity_resolution_policy.py  test_logger.py  test_main.py  test_parser.py  test_pipeline.py  test_resolver.py  test_utils.py  test_xml_transmutation_policy.py
