[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason_etl_liver_tox"
dynamic = ["version"]
description = "ETL process for integrating FDA drug labels and prescribing information"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Akshaya M", email = "akshaya.movvar@coreason.ai" },
]
dependencies = [
    "dlt>=1.23.0",
    "loguru>=0.7.2",
    "polars>=1.39.0",
    "pydantic>=2.12.5",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "xmltodict>=1.0.4",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical",
    "mypy>=1.19.1",
    "pytest-asyncio",
    "pytest-benchmark",
    "deptry",
    "deepdiff",
    "hypothesis",
    "syrupy",
    "mkdocstrings-python",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-xdist>=3.6.1",
    "respx>=0.22.0",
    "types-requests>=2.32.4.20260107",
    "dbt-core>=1.11.7",
    "dbt-postgres>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_etl_liver_tox"]

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_etl_liver_tox"
Repository = "https://github.com/CoReason-AI/coreason_etl_liver_tox"
Documentation = "https://github.com/CoReason-AI/coreason_etl_liver_tox"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TCH", "FA", "PIE", "RET", "PERF", "FURB", "LOG", "N", "A", "S"]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
disable_error_code = ["misc", "unused-ignore", "import-untyped", "no-any-return"]

[tool.uv.sources]
orjson = { path = "mocks/orjson" }
pywin32 = { path = "mocks/pywin32", marker = "sys_platform == 'win32'" }
dbt-extractor = { path = "mocks/dbt-extractor" }

[tool.deptry.per_rule_ignores]
DEP002 = ["dlt", "polars", "ratelimit", "requests", "xmltodict"]

[tool.pytest.ini_options]
addopts = "-n auto --cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=100"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
